[IV] QPT-75  Extracted booking information from ARG reservation system, and improved open api generator
